tonledb/k8s/security/podsecurity.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tonledb-ns
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
